examples/qasm_dev/syntax_errors/e70.qasm
qreg a[5];
qreg b[5];
CX a,b
CX a,b;

